[GTK] Unreviewed, buld fix for Ubuntu LTS after 273292@main https://bugs.webkit.org/show_bug.cgi?id=267411

Guard block of code using 'RealtimeIncomingSourceGStreamer' within "USE(GSTREAMER_WEBRTC)".

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

Canonical link: https://commits.webkit.org/273303@main